# tp-rk

./: CMakeLists.txt  CPackConfig.cmake  main.cpp
.github/workflows/: CI.yml
HasQuarterState_lib/: CMakeLists.txt  HasQuarterState.h
NoQuarterState_lib/: CMakeLists.txt  NoQuarterState.h
gumballmachine_lib/: CMakeLists.txt
soldoutstate_lib/: CMakeLists.txt  SoldOutState.h
soldstate_lib/: CMakeLists.txt  SoldState.h
state_lib/: CMakeLists.txt
tests/: CMakeLists.txt  test_HasQuarterState.cpp  test_NoQuarterState.cpp  test_gumballmachine.cpp  test_soldoutstate.cpp  test_soldstate.cpp  test_state.cpp  test_winnerstate.cpp
winnerstate_lib/: CMakeLists.txt  WinnerState.h
